<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <Button
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:id="@+id/egzamin_button"
        android:text="@string/egzamin_button_text"
        android:padding="20dp"
        android:layout_margin="20dp"/>
    <Button
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:id="@+id/proba_button"
        android:text="@string/proba_button_text"
        android:padding="20dp"
        android:layout_margin="20dp"/>
    <Button
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:id="@+id/baza_button"
        android:text="@string/baza_button_text"
        android:padding="20dp"
        android:layout_margin="20dp"/>

</LinearLayout>