<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/question_number_text"
        android:gravity="center"
        android:padding="5dp"
        android:layout_margin="5dp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/title_text"
        android:gravity="center"
        android:padding="5dp"
        android:layout_margin="5dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/question_text"
        android:gravity="center"
        android:padding="5dp"
        android:layout_margin="5dp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/green"
        android:id="@+id/correct_answer_text"
        android:hint="@string/correct_answer"
        android:gravity="center"
        android:padding="5dp"
        android:layout_margin="5dp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/answer2_text"
        android:gravity="center"
        android:padding="5dp"
        android:layout_margin="5dp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/answer3_text"
        android:gravity="center"
        android:padding="5dp"
        android:layout_margin="5dp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/answer4_text"
        android:gravity="center"
        android:padding="5dp"
        android:layout_margin="5dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">


        <Button
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
            android:layout_weight="1"
        android:id="@+id/prev_question_button"
        android:layout_gravity="start"
        android:text="@string/prev_question"/>

        <Button
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:id="@+id/save_question_button"
            android:layout_gravity="start"
            android:layout_weight="1"
            android:text="@string/save_question"/>
        <Button
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:id="@+id/add_next_question_button"
            android:layout_weight="1"
            android:layout_gravity="end"

            android:text="@string/next_question"/>

    </LinearLayout>


    <Button
        android:id="@+id/end_adding_quiz_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:text="@string/end_adding_question"/>

</LinearLayout>