<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:adroid="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
>


    <TextView
        android:id="@+id/question_number"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:textAlignment="center"
        android:textSize="25sp"
        adroid:layout_constraintEnd_toEndOf="parent"
        adroid:layout_constraintStart_toStartOf="parent"
        adroid:layout_constraintTop_toTopOf="parent"
        tools:text="@string/question_number" />

    <TextView
        android:id="@+id/question"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:background="@drawable/question_background"
        android:textAlignment="center"
        android:textSize="20sp"
        adroid:layout_constraintEnd_toEndOf="parent"
        adroid:layout_constraintHorizontal_bias="0.498"
        adroid:layout_constraintStart_toStartOf="parent"
        adroid:layout_constraintTop_toBottomOf="@+id/question_number"
        tools:text="@string/question" />

    <ImageButton
        android:id="@+id/next_question_button"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:background="@mipmap/ic_next"
        adroid:layout_constraintBottom_toBottomOf="parent"
        adroid:layout_constraintEnd_toEndOf="parent" />

    <RadioGroup
        android:id="@+id/answer_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        adroid:layout_constraintEnd_toEndOf="parent"
        adroid:layout_constraintStart_toStartOf="parent"
        adroid:layout_constraintTop_toBottomOf="@+id/question">

        <RadioButton
            android:id="@+id/answer1_radio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="50dp"
            android:text="RadioButton" />

        <RadioButton
            android:id="@+id/answer2_radio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="50dp"

            android:text="RadioButton" />

        <RadioButton
            android:id="@+id/answer3_radio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="50dp"

            android:text="RadioButton" />

        <RadioButton
            android:id="@+id/answer4_radio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="50dp"

            android:text="RadioButton" />
    </RadioGroup>

    <TextView
        android:id="@+id/timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/time"
        android:textSize="30sp"
        adroid:layout_constraintBottom_toBottomOf="parent"
        adroid:layout_constraintEnd_toStartOf="@+id/next_question_button"
        adroid:layout_constraintHorizontal_bias="0.099"
        adroid:layout_constraintStart_toStartOf="parent"
        tools:text="@string/time" />

    <ImageButton
        android:id="@+id/call_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="16dp"
        adroid:layout_constraintBottom_toBottomOf="parent"
        adroid:layout_constraintEnd_toStartOf="@+id/help_button"
        adroid:layout_constraintHorizontal_bias="0.141"
        adroid:layout_constraintStart_toEndOf="@+id/timer"
        adroid:srcCompat="@android:drawable/stat_sys_phone_call" />

    <ImageButton
        android:id="@+id/help_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="16dp"
        adroid:layout_constraintBottom_toBottomOf="parent"
        adroid:layout_constraintEnd_toStartOf="@+id/next_question_button"
        adroid:srcCompat="@android:drawable/ic_menu_help" />


</androidx.constraintlayout.widget.ConstraintLayout>
